# lib_i2c

./: .gitignore  .gitmodules  CMakeLists.txt
.west/: config
lib_i2c/: CMakeLists.txt
westconfig/: west.yml
